  31. Web Servers can now be stopped/started at runtime with CREATE WEBSERVER [name] and DESTROY WEBSERVER [name]
  32. Apprentices can no longer gain experience beyond that necessary for their next level.
  33. Prop_Resistance (and the other resistance props) now supports ability types and domains.
  34. New player command: Account, for seeing account info
# Build 5.8.5 Released 12/23/2014
   1. Sailing ship creation and distribution now actually works.
   2. Sailing Ships are now only as fast as their item's "ability" score. (1 means 1 move per tick, etc)
   3. Sailing Ships now properly count as Property for the purposes of certain spells and skills.
   4. Shipwright can retitle/redescribe sailing ship rooms now.
   5. Improvement to context-usage when targeting items, mobs, or exits, e.g.: look item.3
   6. MUDGrinder item adder/editor will now only show options appropriate to the area theme -- keep this in mind! 
   7. There is now a mundane/player version of the STAT command for -- wait for it -- viewing character stats
   8. Several electronic/tech/space editor fields finally added to MUDGrinder item editor.
   9. ShopKeeper view now shows more useful information about ships for sale.
  10. New resource: aluminum
# Build 5.8.4 Released 12/01/2014
   *. Database Schema Updated for CMBKLG and CMCLIT.  See the Installation Guide about running DBUpgrade.
   1. Channels now save their back messages to the database for perpetual enjoyment. See DISABLE,CHANNELBACKLOG in coffeemud.ini.
   2. Bit geeky, but exposed the Cross Class skill analysis and Recovery Rates analysis from MUDGrinder (char class and control panel respec)
   3. Scroll Scribing is now available to low level mages and arcanists for limited scroll making, and new transcribing feature.
   4. Bankers can now handle deposited containers as a single deposited object.  Players can now have their safety deposit box type thingys.
   5. Weaving has gotten a little recipe love; not much, but a little.